# dhbw-turnierplaner

./: .gitignore  CMakeLists.txt  README.md  commit-guidlines.md
backend/: CMakeLists.txt  Makefile  cmake_install.cmake
backend/inc/: group-stage.hpp  ko-stage.hpp  match.hpp  stage.hpp  team.hpp  tournament.hpp  uuid-gen.hpp  uuid.h
backend/src/: group-stage.cpp  ko-stage.cpp  main.cpp  match.cpp  stage.cpp  team.cpp  tournament.cpp  uuid-gen.cpp
docs/: backlog.md  branch-guidlines.md  coding-guidlines  sprints.md
docs/latex/: lastenheft.tex  main.tex  pflichtenheft.tex
docs/mermaid/: tournament-classes.md  tournament-classes.mmd
frontend/: CMakeLists.txt  CMakeUserPresets.json
frontend/inc/: main.hpp
frontend/inc/gui/widgets/: MatchWidget.hpp
frontend/inc/gui/windows/: MainWindow.hpp
frontend/src/: main.cpp  portottyping.html
frontend/src/gui/widgets/: MatchWidget.cpp  MatchWidget.ui
frontend/src/gui/windows/: MainWindow.cpp  MainWindow.ui
frontend/src/koTree/: styles.css
